// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate model uml properly 1`] = `
"
@startuml


class PersonModel {
  +title
  +name
  +birthday
}

@enduml"
`;

exports[`should generate model uml with belongsTo relationship 1`] = `
"
@startuml
profile o-- \\"belongsTo\\" UserModel 

class UserModel {
  +profile
}

@enduml"
`;

exports[`should generate model uml with data types properly 1`] = `
"
@startuml


class PersonModel {
  +name: string
  +age: number
  +admin: boolean
  +birthday: date
}

@enduml"
`;

exports[`should generate model uml with data types with default values properly 1`] = `
"
@startuml


class UserModel {
  +username: string
  +email: string
  +verified: boolean
  +createdAt: date
}

@enduml"
`;

exports[`should generate model uml with hasMany relationship 1`] = `
"
@startuml
comment *-- \\"hasMany\\" BlogPostModel 

class BlogPostModel {
  +comments
}

@enduml"
`;

exports[`should generate model uml with one-to-many reflexive reelations 1`] = `
"
@startuml
folder *-- \\"hasMany\\" FolderModel 
folder o-- \\"belongsTo\\" FolderModel 

class FolderModel {
  +children
  +parent
}

@enduml"
`;

exports[`should generate model uml with one-to-one reflexive relations 1`] = `
"
@startuml
user o-- \\"belongsTo\\" UserModel 

class UserModel {
  +name: string
  +bestFriend
}

@enduml"
`;

exports[`should generate model uml with reflexive relations without inverse 1`] = `
"
@startuml
folder o-- \\"belongsTo\\" FolderModel 

class FolderModel {
  +parent
}

@enduml"
`;

exports[`should generate transform multiple properties properly 1`] = `
"
@startuml


class MyComponent {
  +prop1
  +prop2
}

@enduml"
`;

exports[`should generate transform public method properly 1`] = `
"
@startuml


class MyComponent {
  +method1()
}

@enduml"
`;

exports[`should generate transform public property properly 1`] = `
"
@startuml


class MyComponent {
  +prop1
}

@enduml"
`;

exports[`should generate transform service properties  properly 1`] = `
"
@startuml

class marketplace << (S, #FF7700) >>
MyComponent ..> marketplace : service
class overlay << (S, #FF7700) >>
MyComponent ..> overlay : service
class MyComponent {
  
}

@enduml"
`;
